Changed header height from 38% to 330px

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -130,7 +130,7 @@ nav {
 .main-header {
     background: url(../img/example.jpg) no-repeat 0 0 ;
     background-size: cover;
-    height: 38%;
+    height: 330px;
     
 }
 
