--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,5 +1,3 @@
-@import "variables"; //All variables, mixins
-
 article.project {
     max-width: 100%;
     padding: 20px 0;
@@ -23,10 +21,20 @@ article.project {
 }    
 
 .project-item {
+    width: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
     background: url("../img/symphony.png") repeat;
     figure {
         width: 50%;
-        height:inherit;
+        height: inherit;
         img {
             width: 100%;
         }
@@ -39,22 +47,24 @@ article.project {
         -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
         -moz-box-sizing: border-box;    /* Firefox, other Gecko */
         box-sizing: border-box;         /* Opera/IE 8+ */
-        font-style: italic;
+        font-style: normal;
     }
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
     
     @media screen and (max-width: $break-medium) {
+        -webkit-justify-content: space-around;
         justify-content: space-around;
         figure,
         p {
             width: 100%;
             height: auto;
         }
+        p {
+            padding: 20px;
+        }
     }
 
     @media screen and (max-width: $break-small) {
+        -webkit-flex-flow: column wrap;
         flex-flow: column wrap;
         padding: 0;
         img,
